# pensar

./: .gitignore  CMakeLists.txt  FindICU.cmake  ICU-Target-release.cmake  ICUConfig.cmake  ICUConfigVersion.cmake  ICUTargets.cmake  LICENSE  README.md  WORKER_COMMANDQUEUE_PLAN.md  build_run.sh  log.txt  module-ICU-release-x86_64-data.cmake  module-ICUTargets.cmake  plan-cppModuleTransition.prompt.md
.github/: copilot-instructions.md
.github/agents/: C++ ASIO Command.agent.md  C++ Catch2 Test.agent.md  C++ SOCI PostgreSQL.agent.md  C++ agent.agent.md
contact/: CONTACT_MANAGEMENT_PLAN.md  contact.hpp  e-mail.hpp  person.hpp  phone.hpp
contact/data/: audit_dao.hpp  contact_dao.hpp  db_connection.hpp  locale_dao.hpp  org_dao.hpp  person_dao.hpp  role_dao.hpp  search_dao.hpp  visibility_dao.hpp
contact/db/: contact_ddl.sql
contact/test/: db_test.cpp  e-mail_test.cpp  person_test.cpp
cpp/src/: algorithm_util.hpp  array.hpp  binary_buffer.hpp  bool.hpp  byte_order.hpp  bytes_util.hpp  class_info.hpp  clone_util.hpp  code_util.hpp  command.hpp  concept.hpp  constant.hpp  constraint.hpp  country.hpp  cs.hpp  data.hpp  date.hpp  defines.hpp  distance.hpp  double64.hpp  encoding.hpp  endian.hpp  equal.hpp  error.hpp  factory.hpp  file.hpp  generator.hpp  icu_util.hpp  io_util.hpp  language.hpp  locale.hpp  log.hpp  mac_address.hpp  macros.hpp  memory.hpp  memory_buffer.hpp  mg.hpp  multiplatform.hpp  obj_memory_buffer.hpp  object.hpp  (+17 more)
cpp/src/android/: system_android.hpp
cpp/src/ios/: io_util_ios.cpp  system_ios.hpp
cpp/src/linux/: file_linux.hpp  io_util_linux.hpp  sys_user_info_linux.hpp  system_linux.hpp
cpp/src/macos/: file_macos.hpp  io_util_macos.hpp  sys_user_info_macos.hpp  system_macos.hpp
cpp/src/test/: algorithm_util_test.cpp  array-test.cpp  binary_buffer_test.cpp  byte_order_test.cpp  code_util_test.cpp  command_test.cpp  concept_test.cpp  constraint_test.cpp  distance_test.cpp  double64_test.cpp  dummy.hpp  factory_test.cpp  file_test.cpp  generator_test.cpp  io_util_test.cpp  log_test.cpp  main.cpp  memory_buffer_test.cpp  object_test.cpp  path_test.cpp  random_util_test.cpp  s_test.cpp  sorted_list_test.cpp  stop_watch_test.cpp  system_macos_test.cpp  test_helpers.hpp  wire_double_test.cpp
cpp/src/test/old/: dummy.cpp  dummy_factory.cpp  dummy_factory.hpp  generator_test.cpp_old  id_test.hpp  idummy.hpp  idummy_ro.cpp  name_test.cpp  name_test.txt  version_test.cpp
cpp/src/windows/: file_windows.hpp  io_util_windows.hpp  sys_user_info_windows.hpp  system_windows.hpp
unit_test/src/: test.hpp
